--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+body{
+    margin: 0;
+    padding: 0;
+}
             /*top-header + Biography-section*/
  .top-header {
      background-image: url("images/header-bg.png");
@@ -98,5 +102,5 @@ h1{
     text-align: center;
     font-size: 12px;
     margin-top: 150px;
-    margin-bottom: px;
+    margin-bottom:100px;
 }
